--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -3,3 +3,7 @@
   padding: 0;
   font-family: 'Raleway', sans-serif;
 }
+
+body {
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+}
