adjust home page, implement prettier, lint and husky

--- a/src/assets/icomoon/style.css
+++ b/src/assets/icomoon/style.css
@@ -1,16 +1,18 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?cd6dlj');
-  src:  url('fonts/icomoon.eot?cd6dlj#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?cd6dlj') format('truetype'),
-    url('fonts/icomoon.woff?cd6dlj') format('woff'),
-    url('fonts/icomoon.svg?cd6dlj#icomoon') format('svg');
+  src: url('fonts/icomoon.eot?a2a44k');
+  src:
+    url('fonts/icomoon.eot?a2a44k#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?a2a44k') format('truetype'),
+    url('fonts/icomoon.woff?a2a44k') format('woff'),
+    url('fonts/icomoon.svg?a2a44k#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
@@ -25,24 +27,45 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-ewerton-augusto-logo:before {
+  content: '\e90d';
+}
+.icon-moon-solid-1:before {
+  content: '\e907';
+}
+.icon-sun-solid:before {
+  content: '\e908';
+}
+.icon-envelope:before {
+  content: '\e909';
+}
+.icon-github:before {
+  content: '\e90a';
+}
+.icon-instagram:before {
+  content: '\e90b';
+}
+.icon-linkedin:before {
+  content: '\e90c';
+}
 .icon-burger-solid:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-cake-candles-solid:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-calendar-day-solid:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-hand-holding-dollar-solid:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-stopwatch-20-solid:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-umbrella-beach-solid:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-users-solid:before {
-  content: "\e906";
+  content: '\e906';
 }
