--- a/src/styles/globalStyle.css
+++ b/src/styles/globalStyle.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("../assets/icomoon/style.css");
+@import url('../assets/icomoon/style.css');
 
 * {
   margin: 0;
